# rsaxi

./: Cargo.toml  LICENSE  README.md  build.rs
.zed/: settings.json
fonts/hershey/: unicodemap.csv
src/: axidraw.rs  device.rs  drawing.rs  main.rs  text.rs
src/font/: cache.rs  cyrilic.rs  font.rs  glyph.rs  gothic.rs  greek.rs  group.rs  italic.rs  roman.rs  script.rs  variant.rs
src/motion/: block.rs  error.rs  instant.rs  mod.rs  plan.rs  planner.rs  point.rs  segment.rs  trapezoid.rs  triangle.rs  util.rs
src/text/: text.rs
src/text/font/: error.rs  font.rs  glyph.rs  mod.rs  variant.rs
