[package]
name = "axi"
version = "0.1.0"
edition = "2021"
authors = ["Taras Koval <tkoval83@icloud.com>"]
description = "A Rust application for controlling AxiDraw"
homepage = "https://github.com/tkoval83/axi"
repository = "https://github.com/tkoval83/axi"
license = "MIT"
readme = "README.md"
keywords = ["AxiDraw"]

[dependencies]
serialport = "4.5.1"
anyhow = "1.0.89"
svg = "0.17.0"
log = "0.4.17"
env_logger = "0.11.5"
thiserror = "1.0.40"
geo = "0.28.0"
geo-types = "=0.7.13"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.20.2"
clap = "4.5.20"

[build-dependencies]
csv = "1.1"
phf_codegen = "0.11.2"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.build-override]
debug = true
